dev-kubernetes/kind/kubesphere/users.iam.kubesphere.io.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: users.iam.kubesphere.io
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURmekNDQW1lZ0F3SUJBZ0lVQ1Z6TFZGS3R0WGhtSE51dm5USWJ1bVJxVUhvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1R6RUxNQWtHQTFVRUJoTUNRMDR4Q3pBSkJnTlZCQWdNQWtoQ01STXdFUVlEVlFRS0RBcExWVUpGVTFCSQpSVkpGTVI0d0hBWURWUVFEREJWcmN5MWpiMjUwY205c2JHVnlMVzFoYm1GblpYSXdIaGNOTWpBd09ESTNNVFkxCk1ESTFXaGNOTkRnd01URXpNVFkxTURJMVdqQlBNUXN3Q1FZRFZRUUdFd0pEVGpFTE1Ba0dBMVVFQ0F3Q1NFSXgKRXpBUkJnTlZCQW9NQ2t0VlFrVlRVRWhGVWtVeEhqQWNCZ05WQkFNTUZXdHpMV052Ym5SeWIyeHNaWEl0YldGdQpZV2RsY2pDQ0FTSX [...]
    service:
      name: ks-controller-manager
      namespace: kubesphere-system
      path: /validate-email-iam-kubesphere-io-v1alpha2-user
      port: 443
  failurePolicy: Fail
  matchPolicy: Exact
  name: validating-user.kubesphere.io
  namespaceSelector:
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
  objectSelector: {}
  rules:
  - apiGroups:
    - iam.kubesphere.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - users
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30
